--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -3,6 +3,15 @@ on: push
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
+    strategy:
     steps:
+      matrix:
+        node-version: [14.x]
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+         with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
       - run: make install
       - run: make lint
